# webview

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
clients/web_htmx/: Dockerfile  go.mod  go.sum  main.go
clients/web_htmx/public/views/: index.html  upload_video_form.html
protobufs/: cdn.proto  video_processing.proto
services/api-gateway/: Dockerfile  go.mod  go.sum  main.go
services/api-gateway/controllers/video/: controller.go
services/api-gateway/pb/: cdn.pb.go  cdn_grpc.pb.go  video_processing.pb.go  video_processing_grpc.pb.go
services/video_service/: Cargo.toml  Dockerfile  build.rs
services/video_service/src/: bucketing.rs  main.rs  server.rs  video_processing.rs  video_streaming.rs
services/video_service/src/utils/: files.rs
