[package]
name = "video_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
futures = "0.3.29"
tonic = "0.10.2"
prost = "0.12.3"
tonic-reflection = "0.10.2"

[build-dependencies]
tonic-build = "0.10"
